--- a/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.css
+++ b/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.css
@@ -1,8 +1,23 @@
+.container-fluid{
+    display: flex;
+    justify-content: center;
+}
+.booking-container{
+    width: 100%;
+    max-width: 1030px;
+}
 .item{
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
     
+}
+.sep{
+    width: 100%;
+    margin: auto;
+    margin: 10px -20px 10px -20px;
+    height: 2px;
+    box-shadow:  0 0 10px black;
 }
 select, textarea,input{
     color:black;
@@ -15,8 +30,9 @@ select,input{
     height: 30px;
 }
 form{
- 
+    
     width: 100%;
+ 
     
 
     
@@ -50,7 +66,8 @@ form{
     
 }
 .form-container{
-
+    width: 100%;
+    
     border-radius: 10px;
     border: 1px solid black;
     padding: 20px;
@@ -60,6 +77,7 @@ form{
 .car-info{
     margin-bottom: 20px;
     font-size: 14pt;
+    
 
 }
 .car-info .col-sm-7{
@@ -89,6 +107,12 @@ button{
     .car-info .row{
         height: 235px;
     }
+    .car-info img{
+        max-height: 235px;
+        max-width: 356px;
+    }
+    
+    
 }
 @media (max-width: 767px){
     .item{
@@ -105,6 +129,9 @@ button{
     .car-info img{
         width: 100%;
         margin: auto;
+    }
+    .container-fluid{
+        padding: 0;
     }
 }
 .container{
