--- a/CarsCrete/ClientApp/src/app/cars/cars.component.html
+++ b/CarsCrete/ClientApp/src/app/cars/cars.component.html
@@ -18,22 +18,37 @@
         <h5>{{car.Model}}</h5>
         <div class="details">
           <div class="detail-item">
+            <div class="detail-messege">
+              <span>{{"PASSENGERS_S" | translate}}</span>
+            </div>
             <i class="fa fa-male"></i>
             <span>x {{car.Passengers}}</span>
           </div>
           <div class="detail-item">
+            <div class="detail-messege">
+                <span>{{"DOORS" | translate}}</span>
+            </div>
             <i class="fa fa-car"></i>
             <span>x {{car.Doors}}</span>
           </div>
           <div class="detail-item">
+            <div class="detail-messege">
+              <span>{{"TRANSMISSION" | translate}}</span>
+            </div>  
             <i class="fa fa-cogs"></i>
             <span>{{car.Transmission}}</span>
           </div>
           <div class="detail-item">
+            <div class="detail-messege">
+              <span>A/C</span>
+            </div>
             <i class="fa fa-snowflake-o"></i>
             <span>A/C</span>
           </div>
           <div class="detail-item">
+            <div class="detail-messege">
+              <span>{{"FUEL" | translate}}</span>
+            </div>
             <i class="fa fa-tint"></i>
             <span>{{car.Fuel}}</span>
           </div>
