--- a/CarsCrete/ClientApp/src/styles.css
+++ b/CarsCrete/ClientApp/src/styles.css
@@ -33,3 +33,46 @@ span.is-invalid, p.is-invalid{
         overflow-x: hidden;
     }
 }
+@media (min-width: 768px){
+    .detail-item>i{
+        z-index: 20;
+        background-color: white;
+    }
+    .detail-item:hover>i{
+        transition: 0.2s;
+        border-color: red !important;
+        box-shadow: 0 0 5px rgba(255, 0, 0, 0.438); 
+    }
+    .detail-item:hover>span{
+        transition: 0.2s;
+        color: red;
+    }
+    .detail-item:hover .detail-messege{
+        transition: 0.2s ease-out;
+        
+        max-width: 1100px;
+        opacity: 1;
+        max-height: 1000px;
+        top: -30px;
+    }
+}
+
+.detail-messege{
+    white-space: nowrap;
+    background-color: black;
+    color:white;
+    padding: 5px;
+    border-radius: 4px;
+    position: absolute;
+    top: 0px;
+    z-index: 10;
+    opacity: 0;
+    max-width: 0;
+    max-height: 0;
+}
+
+.detail-item{
+    position: relative;
+    cursor: pointer;
+    
+}
