--- a/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.html
+++ b/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.html
@@ -4,8 +4,12 @@
       <div class="form-container">
           <div class="car-info">
             <div class="row">
-              <div class="col-sm-5">
-                <img src="{{service.car?service.car.Photo:''}}" alt="">
+              <div class="col-sm-4">
+                <div (click)="showCarInfo()" class="car-img">
+                  <img src="{{service.car?service.car.Photo:''}}" alt="">
+                  <div class="blur"></div>
+                </div>
+                
               </div>
               <div class="col-sm-7">
                 <p>{{translate.currentLang=='ru'?(service.car?service.car.Description:''):service.car.Description_ENG}}</p>
@@ -62,7 +66,7 @@
                 <div class="col-sm-6">
                     <div class="item">
                       <span [ngClass]="{ 'is-invalid': submitted && f.Name.errors }">Имя</span>
-                      <input formControlName="Name" [ngClass]="{ 'is-invalid': submitted && f.Name.errors }" name="name" type="text" required>
+                      <input formControlName="Name" [ngClass]="{ 'is-invalid': submitted && f.Name.errors }" name="name" type="text" value="{{user?user.Name:''}}" required>
                       <div *ngIf="submitted && f.Name.errors" class="invalid-feedback">
                         <span class="d-block is-invalid" *ngIf="f.Name.errors.required">Укажите имя</span>
                 
@@ -70,12 +74,12 @@
                     </div>
                     <div class="item">
                       <span [ngClass]="{ 'is-invalid': submitted && f.Email.errors }">Email</span>
-                      <input formControlName="Email" [ngClass]="{ 'is-invalid': submitted && f.Email.errors }" name="name" type="Email"  required>
+                      <input formControlName="Email" [ngClass]="{ 'is-invalid': submitted && f.Email.errors }" value="{{user?user.Email:''}}" name="name" type="Email"  required>
                       <div *ngIf="submitted && f.Email.errors" class="invalid-feedback">
                           <span class="d-block is-invalid" *ngIf="f.Email.errors.required">Укажите Email</span>
                       </div>
                     </div>
-                    <div class="item">
+                    <div *ngIf="!user" class="item">
                         <span [ngClass]="{ 'is-invalid': submitted && f.Password.errors }">{{"PASSWORD" | translate}}</span>
                         <input formControlName="Password" type="password" [ngClass]="{ 'is-invalid': submitted && f.Password.errors }" required>
                           
@@ -87,7 +91,7 @@
                       </div>
                     <div class="item">
                         <span [ngClass]="{ 'is-invalid': submitted && f.Tel.errors }">Телефон</span>
-                        <input formControlName="Tel" [ngClass]="{ 'is-invalid': submitted && f.Tel.errors }" name="name" type="tel" pattern="[0-9]{11}" required>
+                        <input formControlName="Tel" [ngClass]="{ 'is-invalid': submitted && f.Tel.errors }" value="{{user?(user.Tel?user.Tel:''):''}}" name="name" type="tel" pattern="[0-9]{11}" required>
                         <div *ngIf="submitted && f.Tel.errors" class="invalid-feedback">
                           
                           <span class="d-block is-invalid" *ngIf="f.Tel.errors.pattern">Формат: 89161782323</span>
@@ -142,7 +146,7 @@
       </div>
     </div>
   </div>
-    
+  <car-card *ngIf="service.showCarInfo" [service]="service"></car-card>
   <alert  [alert] ="alert"></alert>
   
   
