--- a/CarsCrete/ClientApp/src/styles.css
+++ b/CarsCrete/ClientApp/src/styles.css
@@ -34,6 +34,43 @@ span.is-invalid, p.is-invalid{
     }
 }
 @media (min-width: 768px){
+    .car-img{
+        padding: 0;
+        border-radius: 4px;
+        overflow: hidden;
+        
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+    }
+    .blur{
+        position: absolute;
+        top:0;
+        width: 100%;
+        z-index: 100;
+        height: 100%;
+        background-color: rgba(77, 77, 77, 0.253);
+        transition: 0.5s;
+        opacity: 0;
+    }
+    .car-img:hover{
+        transition: 0.2s;
+        
+        box-shadow: 0 0 10px rgba(0,0,0,0.5);
+        
+        
+    }
+    .car-img>img{
+        width: 100%;
+        z-index: 50;
+        
+    }
+    .car-img:hover>.blur{
+        opacity: 1;
+    }
+
     .detail-item>i{
         z-index: 20;
         background-color: white;
@@ -76,3 +113,5 @@ span.is-invalid, p.is-invalid{
     cursor: pointer;
     
 }
+
+
