сделал вывод отзывов о машине на странице бронирования

--- a/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.html
+++ b/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.html
@@ -144,6 +144,9 @@
               
             </form>
       </div>
+      <div class="reports-container">
+        <feedback *ngIf="service.car" [reports]="service.car.Reports"></feedback>
+      </div>
     </div>
   </div>
   <car-card *ngIf="service.showCarInfo" [service]="service"></car-card>
