--- a/CarsCrete/ClientApp/src/app/feedback/feedback.component.css
+++ b/CarsCrete/ClientApp/src/app/feedback/feedback.component.css
@@ -13,7 +13,9 @@
     margin-right: 20px;
     
 }
-
+.col-sm-7{
+    height: 100%;
+}
 select, textarea,input{
     color:black;
     border-radius: 5px; 
@@ -36,7 +38,7 @@ button{
     border: 1px solid blue; */
     border-radius: 10px;
     margin: 10px 0 10px 0;
-    padding: 10px;
+    padding: 0;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
@@ -48,13 +50,13 @@ button{
     
 }
 .comment{
-    margin: 20px;
+    margin: 20px 0 20px 0;
     position: relative;
     
     border: 1px dashed rgb(255, 255, 255);
     border-radius: 10px;
     padding: 10px;
-    width: 90%;
+    width: 100%;
     
    
     overflow: hidden;
