--- a/CarsCrete/ClientApp/src/app/loader/loader.component.html
+++ b/CarsCrete/ClientApp/src/app/loader/loader.component.html
@@ -1,10 +1,11 @@
 <div style="display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    z-index: 10000;
+    
     top:0;
     left: 0;
     width: 100%;
     height: 100%;">
-      <img src="../../assets/images/load.gif" alt="">
+      <img style="width: 40px; height: 40px;" src="../../assets/images/load.gif" alt="">
     </div>
