--- a/CarsCrete/ClientApp/src/app/rating/rating.component.css
+++ b/CarsCrete/ClientApp/src/app/rating/rating.component.css
@@ -1,6 +1,11 @@
 i, span{
+    font-size: 14pt;
     color: rgb(230, 196, 8);
 }
 span{
+    font-weight: normal;
     margin-left: 5px;
+}
+p{
+    margin-bottom: 0;
 }
