--- a/CarsCrete/ClientApp/src/app/feedback/feedback.component.html
+++ b/CarsCrete/ClientApp/src/app/feedback/feedback.component.html
@@ -65,8 +65,8 @@
             <div class="row">
                 <div class="col-sm-9">
                     <p>
-                        <span class="glyphicon glyphicon-user"></span> {{com.User.Name}} 
-                        <br>
+                        <img class ="user-img-small"  src="{{com.User.Photo}}"> {{com.User.Name}}   |   
+                        
                         <i class="fa fa-car"></i> {{com.Car.Model}}
                     </p>
                 </div>
@@ -74,8 +74,6 @@
                     <span class="glyphicon glyphicon-time"></span> {{com.CreatedDate | date: 'dd.MM.yyyy'}}
                     <br>
                     <rating [mark]="com.Mark"></rating>
-                    
-
                 </div>
             </div>
             <div class="row">
@@ -86,7 +84,7 @@
                             <div class="row">
                                 <div class="col-sm-9">
                                     <p>
-                                        <span class="glyphicon glyphicon-user"></span> {{comment.User.Name}} 
+                                        <img class ="user-img-small"  src="{{com.User.Photo}}"> {{comment.User.Name}} 
                                     </p>
                                     <p>{{comment.Text}}</p>
                                 </div>
